--- a/banquiseMarket/templates/home.html
+++ b/banquiseMarket/templates/home.html
@@ -1,9 +1,20 @@
 {% extends "base.html" %}
 
+{% load static %}
+
 {% block title %}Bienvenu chez moi{% endblock %}
 
 {% block content %}
 
-<p>Coucou</p>
+<div class="container">
+  <ul>
+    <li class="one"><a href="#">Accueil</a></li><!--
+ --><li class="two"><a href="#">Services</a></li><!----><li class="three"><a href="#">Blog</a></li><!--
+ --><li class="four"><a href="#">Contact</a></li>
+    <hr />
+  </ul>
+</div>
 
-{% endblock %}
+<img src="{% static "logoPenguin.png" %}" alt="Logo" />
+
+{% endblock %}
