--- a/banquiseMarket/templates/home.html
+++ b/banquiseMarket/templates/home.html
@@ -2,19 +2,9 @@
 
 {% load static %}
 
-{% block title %}Bienvenu chez moi{% endblock %}
+{% block title %}BanquiseMarker - Accueil{% endblock %}
 
 {% block content %}
 
-<div class="container">
-  <ul>
-    <li class="one"><a href="#">Accueil</a></li><!--
- --><li class="two"><a href="#">Services</a></li><!----><li class="three"><a href="#">Blog</a></li><!--
- --><li class="four"><a href="#">Contact</a></li>
-    <hr />
-  </ul>
-</div>
-
-<img src="{% static "logoPenguin.png" %}" alt="Logo" />
 
 {% endblock %}
