--- a/banquiseMarket/templates/home.html
+++ b/banquiseMarket/templates/home.html
@@ -2,9 +2,10 @@
 
 {% load static %}
 
-{% block title %}BanquiseMarker - Accueil{% endblock %}
+{% block title %}BanquiseMarket - Accueil{% endblock %}
 
 {% block content %}
 
+XDDDDDD
 
 {% endblock %}
