--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -3,10 +3,12 @@
 {% block title %}Banquise Marker - Contact{% endblock %}
 
 {% block content %}
-<h1>Contact</h1>
-<form role="form" action="" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Submit</button>
-</form>
+<div id="contact">
+	<h1>Contact</h1>
+	<form role="form" action="" method="post">
+	    {% csrf_token %}
+	    {{ form.as_p }}
+	    <button type="submit">Envoyer</button>
+	</form>
+</div>
 {% endblock %}
