--- a/produit/templates/produit/produit_detail.html
+++ b/produit/templates/produit/produit_detail.html
@@ -10,6 +10,9 @@
                 <img src="{{ produit.image.url }}"/>
             {% endif %}
             <p>{{ produit.descriptif }}</p>
+            <div class="prix">
+                <p>Prix : {{ produit.prix }}</p>
+            </div>
         {% endif %}
     </div>
 {% endblock %}
