--- a/produit/templates/produit/produit_list.html
+++ b/produit/templates/produit/produit_list.html
@@ -2,16 +2,21 @@
 
 {% block content %}
     {% for produit in produits reversed %}
-        <div class="produit"> 
-            <div class="date">
-                <p> published date: {{ produit.published_date }}</p>
+        {% if produit.published_date %}
+            <div class="produit"> 
+                <div class="date">
+                    <p> published date: {{ produit.published_date }}</p>
+                </div>
+                <h1><a href="{% url 'produit_detail' pk=produit.pk %}">{{ produit.nom }}</a></h1>
+                {% if produit.image %}
+                    <img src="{{ produit.image.url }}" height="200" width="200"/>
+                {% endif %}
+                <a href="{% url 'produit_detail' pk=produit.pk %}">détails</a>
+                <div class="prix">
+                    <p> Prix de l'article: {{ produit.prix }}</p>
+                </div>
             </div>
-            <h1><a href="{% url 'produit_detail' pk=produit.pk %}">{{ produit.nom }}</a></h1>
-            {% if produit.image %}
-                <img src="{{ produit.image.url }}" height="200" width="200"/>
-            {% endif %}
-            <a href="{% url 'produit_detail' pk=produit.pk %}">détails</a>
-        </div>
-        <hr />
+            <hr />
+        {% endif %}
     {% endfor %}
 {% endblock %}
