--- a/banquiseMarket/templates/base.html
+++ b/banquiseMarket/templates/base.html
@@ -14,9 +14,9 @@
 	    <div id="global">
 		    <div class="container">
 			  <ul>
-			    <li class="one"><a href="#">Accueil</a></li><!--
-			 --><li class="two"><a href="#">Services</a></li><!----><li class="three"><a href="#">Blog</a></li><!--
-			 --><li class="four"><a href="#">Contact</a></li>
+			    <li class="one"><a href="/">Accueil</a></li><!--
+			 --><li class="two"><a href="/">Services</a></li><!----><li class="three"><a href="#">Blog</a></li><!--
+			 --><li class="four"><a href="/contact">Contact</a></li>
 			    <hr />
 			  </ul>
 			</div>
