--- a/produit/templates/produit/produit_detail.html
+++ b/produit/templates/produit/produit_detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="produit">
+    <div id="produit">
         {% if produit.published_date %}
             <div class="date">
                 {{ produit.published_date }}
