--- a/banquiseMarket/templates/base.html
+++ b/banquiseMarket/templates/base.html
@@ -11,15 +11,32 @@
 	<link rel="stylesheet" type="text/css" href="{% static "test.css" %}">
     </head>
     <body>
+    	<nav class="navbar navbar-inverse">
+			  <div class="container-fluid">
+			    <!-- Brand and toggle get grouped for better mobile display -->
+			    <div class="navbar-header">
+			      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+			        <span class="sr-only">Toggle navigation</span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			      </button>
+			      <a class="navbar-brand" href="#">Banquise Market</a>
+			    </div>
+
+			    <!-- Collect the nav links, forms, and other content for toggling -->
+			    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			      <ul class="nav navbar-nav">
+			        <li class="active"><a href="/">Accueil <span class="sr-only">(current)</span></a></li>
+			        <li><a href="/produits">Produits</a></li>
+			        <li><a href="/contact">Contact</a></li>
+			        <li><a href="/archives">Archives</a></li>
+			        <li><a href="/mentions">Mentions légales</a></li>
+			      </ul>
+			    </div><!-- /.navbar-collapse -->
+			  </div><!-- /.container-fluid -->
+			</nav>
 	    <div id="global">
-		    <div class="container">
-			  <ul>
-			    <li class="one"><a href="/">Accueil</a></li><!--
-			 --><li class="two"><a href="/">Services</a></li><!----><li class="three"><a href="#">Blog</a></li><!--
-			 --><li class="four"><a href="/contact">Contact</a></li>
-			    <hr />
-			  </ul>
-			</div>
 	
 			{% block content %}
         	{% endblock %}
