--- a/banquiseMarket/templates/base.html
+++ b/banquiseMarket/templates/base.html
@@ -33,10 +33,23 @@
 			        <li><a href="/archives">Archives</a></li>
 			        <li><a href="/mentions">Mentions légales</a></li>
 			      </ul>
+			      <ul class="nav navbar-nav navbar-right">
+			        <li><a href="/login">Login</a></li>
+			      </ul>
 			    </div><!-- /.navbar-collapse -->
 			  </div><!-- /.container-fluid -->
 			</nav>
 	    <div id="global">
+		    <!--<div class="container">
+			  <ul>
+			    <li class="one"><a href="/">Accueil</a></li>
+			 	<li class="two"><a href="/produits">Produits</a></li>
+			    <li class="three"><a href="/contact">Contact</a></li>
+			 	<li class="four"><a href="/archive">Archives</a></li>
+			 	<li class="five"><a href="/mentions">Mentions légales</a></li>
+			    <hr />
+			  </ul>
+			</div>-->
 	
 			{% block content %}
         	{% endblock %}
