--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -3,7 +3,7 @@
 {% block title %}Banquise Marker - Contact{% endblock %}
 
 {% block content %}
-<div id="contact">
+<div class="contact">
 	<h1>Contact</h1>
 	<form role="form" action="" method="post">
 	    {% csrf_token %}
