--- a/banquiseMarket/templates/home.html
+++ b/banquiseMarket/templates/home.html
@@ -6,6 +6,15 @@
 
 {% block content %}
 
-XDDDDDD
+<div class="presentation">
+	<h1>Bienvenue sur Banquise Market</h1>
+	<h2>La référence des distrutions Linux</h2>
+	<p>Nous vendons les distributions Linux les plus utilisées et performantes au monde, <br/>
+	de Linux Mint, Ubuntu à Kali Linux, il y en a pour tous les goûts</p>
+	<p>En ce moment ne manquez pas nos promotions sur les dernières versions d'Ubuntu !</p>
+</div>
+<div class="last_prod">
+	<h2>Dernier produit ajouté</h2>
+</div>
 
 {% endblock %}
