--- a/banquiseMarket/static/test.css
+++ b/banquiseMarket/static/test.css
@@ -27,6 +27,13 @@ h1 {
     margin-right: auto;
 }
 
+#user {
+  font-size: 20px;
+  color: #ffffff;
+  text-align: center;
+  margin-top: 12px;
+}
+
 .container {
   width: 50%;
   margin: 0 auto;
