--- a/banquiseMarket/static/test.css
+++ b/banquiseMarket/static/test.css
@@ -27,7 +27,6 @@ h1 {
     margin-right: auto;
 }
 
-<<<<<<< HEAD
 #descriptif {
     word-wrap: break-word;
     white-space: -moz-pre-wrap;
@@ -36,13 +35,13 @@ h1 {
 
 #nomProduit {
   font-size: 25px;
-=======
+}
+
 #user {
   font-size: 20px;
   color: #ffffff;
   text-align: center;
   margin-top: 12px;
->>>>>>> 39ee8858690eb742a1aa6fd59dc8db0a6521ac52
 }
 
 .container {
