--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -3,35 +3,37 @@
 {% block content %}
 
 {% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
+<p>Votre nom d'utilisateur et mot de passe ne correspondent pas. Essayez de nouveau.</p>
 {% endif %}
 
 {% if next %}
     {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed,
-    please login with an account that has access.</p>
+    <p>Votre compte n'a pas accès à cette page.</p>
     {% else %}
-    <p>Please login to see this page.</p>
+    <p>Connectez-vous pour voir cette page</p>
     {% endif %}
 {% endif %}
 
-<form method="post" action="{% url 'login' %}">
-{% csrf_token %}
+<div class="presentation">
+  <h1>Login</h1>
+  <form method="post" action="{% url 'login' %}">
+  {% csrf_token %}
 
-<div>
-  <td>{{ form.username.label_tag }}</td>
-  <td>{{ form.username }}</td>
-</div>
-<div>
-  <td>{{ form.password.label_tag }}</td>
-  <td>{{ form.password }}</td>
-</div>
+  <div>
+    <td>{{ form.username.label_tag }}</td>
+    <td>{{ form.username }}</td>
+  </div>
+  <div>
+    <td>{{ form.password.label_tag }}</td>
+    <td>{{ form.password }}</td>
+  </div>
 
-<div>
-  <input type="submit" value="login" />
-  <input type="hidden" name="next" value="{{ next }}" />
+  <div>
+    <input type="submit" value="login" />
+    <input type="hidden" name="next" value="{{ next }}" />
+  </div>
+  </form>
 </div>
-</form>
 
 
 {% endblock %}
