--- a/banquiseMarket/templates/base.html
+++ b/banquiseMarket/templates/base.html
@@ -36,7 +36,9 @@
 			      <ul class="nav navbar-nav navbar-right">
 			      	{% if user.is_authenticated %}
 			      	<li id="user">{{ user.get_username }}</li>
+			      	<li><a href="/panier">Panier</a></li>
 			      	<li><a href="/logout">Logout</a></li>
+
 			      	{% else %}
 			      	<li><a href="/signup">S'inscrire</a></li>
 			        <li><a href="/login">Login</a></li>
