--- a/banquiseMarket/templates/home.html
+++ b/banquiseMarket/templates/home.html
@@ -16,6 +16,7 @@
 	<p>Nous vendons les distributions Linux les plus utilisées et performantes au monde, <br/>
 	de Linux Mint, Ubuntu à Kali Linux, il y en a pour tous les goûts</p>
 	<p>En ce moment ne manquez pas nos promotions sur les dernières versions d'Ubuntu !</p>
+    <a href="/rss-feed"><img src="{% static "rss-big-small.jpg" %}" alt="RSS" height="32" width="32" /></a>
 </div>
 <div class="last_prod">
 	<h2>Dernier produit ajouté</h2>
