--- a/banquiseMarket/static/test.css
+++ b/banquiseMarket/static/test.css
@@ -44,15 +44,29 @@ h1 {
   margin-top: 12px;
 }
 
-.container {
-  width: 50%;
-  margin: 0 auto;
+.comment {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.form {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 footer {
   text-align: center;
     margin-left: auto;
     margin-right: auto;
+}
+
+.bouton {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
 }
 
 hr {
