--- a/produit/templates/produit/produit_list.html
+++ b/produit/templates/produit/produit_list.html
@@ -14,6 +14,7 @@
             <div class="prix">
                 <p> Prix de l'article: {{ produit.prix }}</p>
             </div>
+            <a href="{% url 'produit_detail' pk=produit.pk %}">Comments: {{ produit.comments.count }}</a>
             <hr />
         </div>
     {% endfor %}
