--- a/banquiseMarket/static/test.css
+++ b/banquiseMarket/static/test.css
@@ -50,6 +50,12 @@ h1 {
     margin-right: auto;
 }
 
+#no_comment {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .form {
     text-align: center;
     margin-left: auto;
