--- a/produit/templates/produit/produit_detail.html
+++ b/produit/templates/produit/produit_detail.html
@@ -23,10 +23,10 @@
     {% for comment in produit.comments.all %}
         <div class="comment">
             <div class="date">{{ comment.created_date }}</div>
-            <strong>{{ comment.author }}</strong>
-            <p>{{ comment.text|linebreaks }}</p>
+            <strong>{{ comment.auteur }}</strong>
+            <p>{{ comment.commentaire|linebreaks }}</p>
         </div>
         {% empty %}
-            <p>Aucun commentaire :(</p>
+            <p id="no_comment">Aucun commentaire :(</p>
     {% endfor %}
 {% endblock %}
