--- a/produit/templates/produit/produit_list.html
+++ b/produit/templates/produit/produit_list.html
@@ -14,7 +14,11 @@
             <div class="prix">
                 <p> Prix de l'article: {{ produit.prix }}</p>
             </div>
+            {% if user.is_authenticated %}
+            <a href="{% url 'add_to_cart' produit.pk 1 %}" class="btn btn-info" role="button">Ajouter</a>
+            {% endif %}
             <hr />
         </div>
+
     {% endfor %}
 {% endblock %}
