--- a/produit/templates/produit/produit_detail.html
+++ b/produit/templates/produit/produit_detail.html
@@ -14,12 +14,17 @@
             <div class="prix">
                 <p>Prix : {{ produit.prix }}</p>
             </div>
+            {% if user.is_authenticated %}
+            <a href="{% url 'add_to_cart' produit.pk 1 %}" class="btn btn-info" role="button">Ajouter</a>
+            {% endif %}
         {% endif %}
     </div>
     <hr />
+    {% if user.is_authenticated %}
     <div class="bouton">
         <a class="btn btn-default" href="{% url 'add_comment_to_produit' pk=produit.pk %}">Ajouter un commentaire</a>
     </div>
+    {% endif %}
     {% for comment in produit.comments.all %}
         <div class="comment">
             <div class="date">{{ comment.created_date }}</div>
